--- a/src/app/service/ldap-details/ldap-details.component.html
+++ b/src/app/service/ldap-details/ldap-details.component.html
@@ -1,1 +1,60 @@
-<p>ldap-details works!</p>
+<h3 class="mat-h3">
+  <button mat-icon-button (click)="goToLdap()">
+    <mat-icon aria-label="Accueil">arrow_back</mat-icon>
+  </button>
+  Edition d'un Utilisateur
+</h3>
+
+<section class="loading" *ngIf="processLoadRunning">
+  <mat-spinner diameter="25"></mat-spinner>
+  <span>&nbsp; En cours de chargement...</span>
+</section>
+
+<form class="user-form" *ngIf="!processLoadRunning"
+      [formGroup]="userForm"
+      (ngSubmit)="onSubmitForm()"
+>
+  <table class="user-full-width">
+    <tr>
+      <td>
+        <mat-form-field class="user-full-width">
+          <input matInput class="form-control" placeholder="Nom de l'utilisateur"
+                 id="nom" formControlName="nom" required
+                 (input)="updateLogin()"
+          />
+          <mat-error>Le nom est requis</mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="user-full-width">
+          <input matInput class="form-control" placeholder="Prénom de l'utilisateur"
+                 id="prenom" formControlName="prenom" required
+                 (input)="updateLogin()"
+          />
+          <mat-error>Le prénom est requis</mat-error>
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+
+  <table class="user-full-width">
+    <tr>
+      <td>
+        <mat-form-field class="user-full-width">
+          <input matInput class="form-control" placeholder="Login de l'utilisateur"
+                 id="login" formControlName="login" required
+                 (input)="updateMail()"
+          />
+          <mat-error>Le login est requis</mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="user-full-width">
+
+        </mat-form-field>
+      </td>
+    </tr>
+
+  </table>
+
+</form>
