fin tp 4 et début tp 5

--- a/src/app/ldap-management/ldap-list/ldap-list.component.html
+++ b/src/app/ldap-management/ldap-list/ldap-list.component.html
@@ -46,3 +46,12 @@
 
   </mat-paginator>
 </div>
+
+<div class="mat-elevation-z8">
+  <button mat-raised-button color="primary"
+    (click)="addUser()">
+    Ajouter un utilisateur
+  </button>
+  <br>
+  <br>
+</div>
