--- a/src/app/ldap-management/ldap-details/ldap-details.component.html
+++ b/src/app/ldap-management/ldap-details/ldap-details.component.html
@@ -2,13 +2,15 @@
   <button mat-icon-button (click)="goToLdap()">
     <mat-icon aria-label="Accueil">arrow_back</mat-icon>
   </button>
-  Edition d'un Utilisateur
+  {{ addForm ? "Ajout d'un utilisateur" : "Edition d'un Utilisateur" }}
 </h3>
 
-<section class="loading" *ngIf="processLoadRunning">
+<section class="loading" *ngIf="processLoadRunning==true">
   <mat-spinner diameter="25"></mat-spinner>
   <span>&nbsp; En cours de chargement...</span>
 </section>
+
+<app-alert *ngIf="errorMessage.length>0" [type]="'danger'">'' errorMessage }}</app-alert>
 
 <form class="user-form" *ngIf="!processLoadRunning"
       [formGroup]="userForm"
@@ -50,11 +52,48 @@
       </td>
       <td>
         <mat-form-field class="user-full-width">
-
+          <mat-label>Mail</mat-label>
+          <input matInput name="mail"
+                 formControlName="mail"
+          />
         </mat-form-field>
       </td>
     </tr>
-
   </table>
+
+  <table class="user-full-width" formGroupName="passwordGroup">
+    <tr>
+      <td>
+        <mat-form-field class="user-full-width">
+          <input type="password" matInput
+                 [placeholder]="passwordPlaceHolder"
+                 id="password" formControlName="password"
+                 [errorStateMatcher]="confirmValidParentMatcher"
+          />
+          <mat-error>{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="user-full-width">
+          <input type="password" matInput
+                 placeholder="Vérification du mot de passe"
+                 id="confirmPassword" formControlName="confirmPassword"
+                 [errorStateMatcher]="confirmValidParentMatcher"
+          />
+          <mat-error>{{getErrorMessage()}}</mat-error>
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+
+  <div style="display:flex; justify-content:flex-end;">
+    <button type="submit" mat-stroked-button color="primary"
+            [disabled]="processValidateRunning || !isFormValid()">
+      <mat-icon *ngIf="processValidateRunning">
+        <mat-spinner diameter="16"></mat-spinner>
+      </mat-icon>
+      Valider
+    </button>
+  </div>
 
 </form>
