--- a/src/app/ldap-management/ldap-details/ldap-details.component.html
+++ b/src/app/ldap-management/ldap-details/ldap-details.component.html
@@ -1,3 +1,4 @@
+<app-navbar>
 <h3 class="mat-h3">
   <button mat-icon-button (click)="goToLdap()">
     <mat-icon aria-label="Accueil">arrow_back</mat-icon>
@@ -97,3 +98,4 @@
   </div>
 
 </form>
+  </app-navbar>
