--- a/src/app/ldap-management/navbar/navbar.component.html
+++ b/src/app/ldap-management/navbar/navbar.component.html
@@ -60,8 +60,9 @@
 
         </mat-sidenav>
         <mat-sidenav-content>
+          <!-- Content Here -->
           <div class="main_content">
-            <router-outlet></router-outlet>
+            <ng-content></ng-content>
           </div>
         </mat-sidenav-content>
       </mat-sidenav-container>
