--- a/src/app/ldap-management/ldap-list/ldap-list.component.html
+++ b/src/app/ldap-management/ldap-list/ldap-list.component.html
@@ -1,3 +1,4 @@
+<app-navbar>
 <div class="mat-elevation-z8">
 
   <div class="toolbar-filter">
@@ -36,7 +37,7 @@
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-      (click)="edit(row.login)"
+      (click)="edit(row.id)"
     ></tr>
   </table>
 
@@ -55,3 +56,4 @@
   <br>
   <br>
 </div>
+</app-navbar>
